--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
@@ -47,11 +47,11 @@ PART
 
 	category = Coupling
 	subcategory = 0
-	title = French_Hermes_Docking_Module
+	title = Callisto Docking Module
 	manufacturer = Knes
-	description = French_Hermes_Docking_Module
+	description = This Docking Module for the Callisto shuttle, take less space than the crew module, allowing to dock to a space station with a payload module.
 
-	tags = Knes Crew Dock Module Hermes
+	tags = Knes Crew Dock Module Hermes Callisto
 
 	mass = 0.4
 
@@ -66,7 +66,15 @@ PART
 	skinInternalConductionMult = 4.0
 	emissiveConstant = 0.75
 
+// --- internal setup ---
+
 	CrewCapacity = 2
+	
+	INTERNAL
+	{
+		name = French_Hermes_Docking_Module_IVA
+		offset = 0.0, 0.0, 0.0
+	}
 
     MODULE
     {
@@ -103,5 +111,12 @@ PART
         {
             key = 0 1
         }
-    }	
+    }
+	
+	MODULE
+	{
+		name = ModuleInventoryPart		
+		InventorySlots = 9
+		packedVolumeLimit = 650
+	}		
 }
