Fixing the Category of some parts. Crewed parts are usually Utility, and none of the parts had the ModuleDecoupler to justify being classified as Coupling.

--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
@@ -45,7 +45,7 @@ PART
 	entryCost = 1200
 	cost = 700
 
-	category = Coupling
+	category = Utility
 	subcategory = 0
 	title = Callisto Docking Module
 	manufacturer = Knes
