--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
@@ -125,4 +125,9 @@ PART
 		InventorySlots = 9
 		packedVolumeLimit = 650
 	}		
+	MODULE
+	{
+		name = ModuleCargoPart
+		packedVolume = 2500
+	}	
 }
