--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
@@ -45,7 +45,7 @@ PART
 
 	attachRules = 1,1,1,1,0
 
-	TechRequired = supersonicFlight
+	TechRequired = generalConstruction
 	entryCost = 1200
 	cost = 700
 
