--- a/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
+++ b/GameData/Knes/Parts/SpacePlane/FrenchHermes/_Knes_French_Hermes_Docking_Module.cfg
@@ -130,4 +130,15 @@ PART
 		name = ModuleCargoPart
 		packedVolume = 2500
 	}	
+	MODULE
+	{
+		name = ModuleScienceContainer
+		
+		reviewActionName = #autoLOC_502201 //#autoLOC_502201 = Review Stored Data
+		storeActionName = #autoLOC_502202 //#autoLOC_502202 = Store Experiments
+		evaOnlyStorage = True // i.e. can nearby regular vessels also do this, or EVA only
+		storageRange = 3
+		canBeTransferredToInVessel = True
+		canTransferInVessel = True
+	}	
 }
