--- a/GameData/Knes/Spaces/French_Hermes_IVA/French_Hermes_Docking_Module_IVA.cfg
+++ b/GameData/Knes/Spaces/French_Hermes_IVA/French_Hermes_Docking_Module_IVA.cfg
@@ -87,4 +87,39 @@ INTERNAL
 		rotation = -0.7071068,0,0,0.7071068
 		scale = 1,1,1
 	}
+	PROP
+	{
+		name = knes_prop_medical_box_1
+		position = 0.459,0.317,-0.657
+		rotation = 0,0.7071068,0.7071068,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_instrument_guitar_1
+		position = -0.489,-0.372,-0.46
+		rotation = -0.2272317,-0.7609711,-0.5095648,0.331108
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_instrument_synth_1
+		position = -0.271,-0.537,-0.573
+		rotation = 0,1,0,0
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_2
+		position = -0.656,-0.02,0.543
+		rotation = 0.5,0.5,-0.5,0.5
+		scale = 1,1,1
+	}
+	PROP
+	{
+		name = knes_prop_box_1
+		position = 0.659,-0.03,0.545
+		rotation = 0.5,-0.5,0.5,0.5
+		scale = 1,1,1
+	}
 }
